modified ride controller, created new custom  exceptions